--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -7,16 +7,24 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MyActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="7">
 
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/ledbuttons"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:numColumns="4"
         android:verticalSpacing="10dp"
         android:horizontalSpacing="10dp"
         android:stretchMode="columnWidth"
         android:gravity="center"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:layout_weight="2"
+        android:layout_height="match_parent"/>
+    <Button
+        android:layout_width="match_parent"
+        android:onClick="toggleRemote"
+        android:text="Toggle"
+        android:layout_weight="5"
+        android:layout_height="match_parent"/>
 </LinearLayout>
